# LLM-Translator

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  Translator.spec  Translator_bridge_windows.spec  Translator_windows.spec  core_test.py  index.html  mac_a.txt  mac_requirements.txt  package-lock.json  package.json  react_python_tauri_plan.md  src_style.md  test_context_verify.py  test_core_pipeline.py  test_core_smoke.py  test_pipepline_local.py  vite.config.ts  windows_requirements.txt
backend/: __init__.py  errors.py  ollama_backend.py
core/: __init__.py  lang.py  pipeline.py  postprocess.py  prompt.py  splitter.py
docs/: translator-flow-demo.html  ui-refactor-plan.md
python_backend/: __init__.py  api_server.py  bridge.py  config.py  models.py
python_backend/services/: __init__.py  translation_service.py
releases/v0.2.0/: README.md  SHA256SUMS.txt  Translator_0.2.0_aarch64.dmg
scripts/: build-python-bridge.mjs  check-tauri-env.mjs
src/: App.tsx  icons.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows-bridge.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkey_macos.rs  hotkey_windows.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
src/components/layout/: AppShell.tsx  ContextPanel.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/lib/: api.ts
tests/: test_bridge_output.py  test_translation_service.py
ui_mac/: app.py  hotkey_helper.py  hotkey_mac.py  menu_helper.py  ocr.py  ui_config.json
ui_windows/: app.py  hotkey_windows.py  ocr.py  ui_config.json
(+11 files in other folders)
